--- a/support/travis/deploy-bintray.json.in
+++ b/support/travis/deploy-bintray.json.in
@@ -6,7 +6,7 @@
         "desc": "VST/AU clock and reset generator",
         "website_url": "https://github.com/shaduzlabs/throb",
         "issue_tracker_url": "https://github.com/shaduzlabs/throb/issues",
-        "vcs_url": "https://github.com/shaduzlabs/cabl.git",
+        "vcs_url": "https://github.com/shaduzlabs/throb.git",
         "github_use_tag_release_notes": false,
         "licenses": ["MIT"],
         "labels": ["VST", "AU", "AudioUnit", "Eurorack", "Plugin", "Clock"],
