update README.md, fix cmake script bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,13 @@ set( JUCE_CONFIG_MAX_IN_CHANNELS 0 )
 set( JUCE_CONFIG_MAX_OUT_CHANNELS 2 )
 set( JUCE_CONFIG_PREFERRED_CHANNELS_CFG "{0,1,},{0,2}")
 
+if( JUCE_CONFIG_IS_SYNTH EQUAL 1)
+  set( JUCE_CONFIG_PLUGIN_VST_TYPE "kPlugCategSynth" )
+  set( JUCE_CONFIG_PLUGIN_AU_TYPE "aumu" ) # Synth: "aumu", FX: "aufx"
+else()
+  set( JUCE_CONFIG_PLUGIN_VST_TYPE "kPlugCategEffect" )
+  set( JUCE_CONFIG_PLUGIN_AU_TYPE "aufx" ) # Synth: "aumu", FX: "aufx"
+endif()
 
 configure_file (
   "${PROJECT_ROOT_DIR}/support/JuceHeader.h.in"
